environment/database-primer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-primer
spec:
 selector:
   matchLabels:
     app: database-primer
 replicas: 1
 template:
   metadata:
     labels:
       app: database-primer
   spec:
     containers:
     - name: dynamic-config-database-primer
       image: ghcr.io/asizikov/dynamic-config-database-primer:v001
    imagePullSecrets:
        - name: dockerconfigjson-github-com
