environment/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-db
spec:
  type: ClusterIP
  selector:
    tier: storage
    app.kubernetes.io/name: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
