environment/management-web.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: management-web
  labels:
    tier: public-web
    app: dynamic-config
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: public-web
  template:
    metadata:
      labels:
        tier: public-web
      name: dynamic-config-management-web
    spec:
      containers:
      - name: dynamic-config-management-web
        image: ghcr.io/asizikov/dynamic-config-management-web:v001
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: dynamic-config-management-web
spec:
  type: NodePort
  selector:
   tier: public-web
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
